--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ address {
     letter-spacing: 0.06em;
     color: #FFF;
     background: #2196F3;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: none;
     margin-top: 30px;
@@ -242,8 +242,8 @@ main {
 }
 .section-team .team-item {
     background: #FFFFFF;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.14), 0 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0 0 4px 4px;
 }
 
 .section-team .team-item .team-info {
@@ -284,7 +284,7 @@ main {
 .portfolio .button-list .list-item button:hover,
 .portfolio .button-list .list-item button:focus {
     background: #2196F3;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    box-shadow: 0 3px 1px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
     color: var(--secondary-color);
 }
